feat: create check slug endpoint so user get feedback if the slug exsist before even adding and adding a check in the create endpoint for extra validation and update swagger with all the new endpoints
